--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -16,8 +16,8 @@ serde_json = "1"
 # Git operations
 git2 = "0.20"
 
-# GitHub API
-octocrab = "0.49"
+# GitHub API (pinned to version compatible with Rust 1.85)
+octocrab = "0.41"
 
 # Utilities
 uuid = { version = "1", features = ["v4"] }
